Corrected CSS style that was intended for anchors but on Firefox OS was being applied to any active element in a message detail view

--- a/source/messages/messages.css
+++ b/source/messages/messages.css
@@ -30,9 +30,9 @@
 	font-weight:			bold;
 }
 
-.message *:link,
-.message *:visited,
-.message *:active {
+.message a:link,
+.message a:visited,
+.message a:active {
 	text-decoration:		none;
 	font-weight:			bold;
 	color:					#777;
